--- a/index.css
+++ b/index.css
@@ -1,3 +1,26 @@
+
+
+.navbar{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: bisque;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar li{
+    display: inline-block;
+    padding: 0 40px;
+    
+}
+
+.navbar a {
+    text-decoration: none;
+    color: black;
+}
+
 .banner{
     background-color: darkgoldenrod;
     color: white;
@@ -9,10 +32,9 @@
 #hitman {
     height: 15%;
     width: 15%;
+    filter: drop-shadow(10px 5px 10px black);
 
 }
-
-
 
 .center{
     text-align: center;
@@ -20,4 +42,24 @@
     font-size: 80px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
+}
+
+.list ul {
+    list-style-type: none;
+
+}
+
+.text-margin {
+    padding: 20px 50px;
+}
+
+.avatar {
+    background-image: url(/resources/images/pngegg-2-2.png) ;
+    background-size: cover;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    display: inline-block;
+    vertical-align: middle;
+    padding: 10px 20px;
 }
